feat: added new demo to flipClock documentation to illustrate use of `showDays` prop

--- a/lib/docs/components/flip-clock.mdx
+++ b/lib/docs/components/flip-clock.mdx
@@ -71,6 +71,10 @@ This component is used internally by `FlipClock` to render and animate individua
 
 <ComponentPreview name="flip-clock-countdown-demo" />
 
+### Show Number of Days
+
+<ComponentPreview name="flip-clock-showdays-demo" />
+
 ## Notes
 
 - Animations are handled via CSS keyframes bundled with the component.
