fix: import export

--- a/lib/docs/components/partition-bar.mdx
+++ b/lib/docs/components/partition-bar.mdx
@@ -33,8 +33,7 @@ npx shadcn@latest add https://ui.8starlabs.com/r/partition-bar.json
 ## Usage
 
 ```tsx showLineNumbers
-import {
-  PartitionBar,
+import PartitionBar, {
   PartitionBarSegment,
   PartitionBarSegmentTitle,
   PartitionBarSegmentValue
